--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 #---------------------------------- MONGO DB ---------------------------------------------------------------------------
 server.port=8080
-#spring.data.mongodb.uri=mongodb://127.0.0.1:27017/store
+spring.data.mongodb.uri=mongodb://127.0.0.1:27017/store
 
 #------------------------------------ CON MYSQL Y H2 -------------------------------------------------------------------
-spring.datasource.url= jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=admin
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url= jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=admin
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=create
